# ImageAnalysisProject

CurrencyDetect/: CMakeLists.txt  main.cpp
